[package]
name = "bema"
version = "0.0.1"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "presentation in the terminal"
readme = "README.md"
homepage = "https://github.com/yazgoo/bema"
repository = "https://github.com/yazgoo/bema"
keywords = ["terminal"]
categories = []

[dependencies]
crossterm = "0.18"
syntect = "4.4"
tempfile = "3.2"
compile-time-run = "0.2"
blockish = "0.0.9"

[dev-dependencies]
indoc = "1.0"
