[profile.dev.package.'*']
opt-level = 3

[package]
name = "bema"
version = "0.0.6"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "presentation in the terminal"
readme = "README.md"
homepage = "https://github.com/yazgoo/bema"
repository = "https://github.com/yazgoo/bema"
keywords = ["terminal"]
categories = []

[dependencies]
crossterm = "0.18"
syntect = "4.4"
tempfile = "3.2"
compile-time-run = "0.2"
blockish = "0.0.9"
macroquad = "0.3.0-alpha.17"
image = "0.23"
indoc = "1.0"

[dev-dependencies]

plotters = "0.3.0"
